--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = https://github.com/AntonioFromBrazil/StepBeepLed
+lib_deps = 
+	https://github.com/AntonioFromBrazil/StepBeepLed
+	esphome/AsyncTCP-esphome@^2.1.3
+	ottowinter/ESPAsyncWebServer-esphome@^3.2.2
