--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+board_build.filesystem = littlefs
 lib_deps = 
 	https://github.com/AntonioFromBrazil/StepBeepLed
 	esphome/AsyncTCP-esphome@^2.1.3
